--- a/req-cuti.html
+++ b/req-cuti.html
@@ -114,7 +114,7 @@
         if (data.nama && data.group) {
           hasil.innerHTML = `
             ✅ Nama: <strong>${data.nama}</strong><br>
-            📌 Group: <strong>${data.group}</strong>
+            ✅ Group: <strong>${data.group}</strong>
           `;
           btnForm.style.display = "inline-block";
           btnForm.dataset.nama = data.nama;
@@ -143,3 +143,4 @@
 
 </body>
 </html>
+
