--- a/form-request.html
+++ b/form-request.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="id">
 <head>
 <meta charset="UTF-8">
@@ -107,8 +107,8 @@ button[type="submit"]:hover{transform:translateY(-2px);box-shadow:0 10px 20px rg
 <script>
 /* ===================== KONFIG ===================== */
 const scriptURL       = "https://script.google.com/macros/s/AKfycbw2rQSGoZzRhapCygGk4_u4LACS0dz2NnC81BVIg8argV6gRXcNvZdjiGocpV97bKIW-A/exec";
-const MAX_KUOTA_HARIAN= 17;     // Info di UI (server = 17/18)
-const MAX_LIBUR_USER  = 9;      // Batas per user untuk LIBUR
+const MAX_KUOTA_HARIAN= 17;
+const MAX_LIBUR_USER  = 9;
 const monthNames = ["Januari","Februari","Maret","April","Mei","Juni","Juli","Agustus","September","Oktober","November","Desember"];
 
 /* ===================== HEADER DINAMIS ===================== */
@@ -129,53 +129,63 @@ const qs = new URLSearchParams(location.search);
 const nikQS   = (qs.get('nik')   || '').trim();
 const namaQS  = (qs.get('nama')  || '').trim();
 const groupQS = (qs.get('group') || '').trim();
-document.getElementById('nik').value   = nikQS;   // readonly
-document.getElementById('nama').value  = namaQS;  // readonly
-document.getElementById('group').value = groupQS; // readonly
+document.getElementById('nik').value   = nikQS;
+document.getElementById('nama').value  = namaQS;
+document.getElementById('group').value = groupQS;
 
-/* ===================== HELPERS ===================== */
-// Normalisasi tanggal dari berbagai format -> "d-MM"
-function normalizeDateString(str){
-  if(!str) return "";
-  if(/^\d{1,2}-\d{1,2}(,\s*\d{1,2}-\d{1,2})*$/.test(str)) return str;
-  if(Array.isArray(str)) return str.map(normalizeDateString).join(", ");
-  if(typeof str==="string" && str.includes(",")){
-    return str.split(",").map(s=>normalizeDateString(s.trim())).join(", ");
-  }
-  const d = new Date(str);
-  if(!isNaN(d)) return `${d.getDate()}-${String(d.getMonth()+1).padStart(2,'0')}`;
-  return String(str);
+/* ===================== HELPERS HARI SAJA ===================== */
+// parse token "2", "2-03", "2025-03-02" -> angka hari (2)
+function parseDayToken(token){
+  const t = String(token || '').trim();
+  if(!t) return null;
+  const m = t.match(/^(\d{1,2})(?:-\d{1,2})?$/);
+  if(m) return Number(m[1]);
+  const d = new Date(t);
+  if(isNaN(d)) return null;
+  return d.getDate();
 }
-// String "d-MM, d-MM" -> array Date
-function dmmStringToDates(str){
+
+// "2, 5, 10" / "2-03,5-03" -> [2,5,10]
+function stringToDayArray(str){
   if(!str) return [];
-  const year = (new Date()).getFullYear();
-  return str.split(",").map(s=>s.trim()).filter(Boolean).map(v=>{
-    const m=v.match(/^(\d{1,2})-(\d{1,2})$/); if(!m) return null;
-    return new Date(year, +m[2]-1, +m[1]);
-  }).filter(Boolean);
+  return String(str).split(',')
+    .map(s => parseDayToken(s))
+    .filter(n => Number.isFinite(n) && n>=1 && n<=31);
 }
+
+// array [2,5,10] -> "2, 5, 10"
+function dayArrayToDisplay(arr){
+  if(!Array.isArray(arr) || !arr.length) return "";
+  const uniq = Array.from(new Set(arr.map(n=>Number(n)).filter(n=>n>=1 && n<=31))).sort((a,b)=>a-b);
+  return uniq.join(", ");
+}
+
+// string "2,5" -> Date[] (bulan depan)
+function daysToDateObjects(str){
+  const days = stringToDayArray(str);
+  if(!days.length) return [];
+  const now = new Date();
+  const nextMonth = new Date(now.getFullYear(), now.getMonth()+1, 1);
+  return days.map(d => new Date(nextMonth.getFullYear(), nextMonth.getMonth(), d));
+}
+
 // Build disabledDates dari array hari ["2","15"]
 function buildDisabledDates(fullDays){
   const now = new Date();
-  const y = now.getFullYear();
-  const nextMonth = new Date(y, now.getMonth()+1, 1);
+  const nextMonth = new Date(now.getFullYear(), now.getMonth()+1, 1);
   if(!Array.isArray(fullDays)) return [];
   return fullDays.map(s=>{
-    const t = String(s).trim();
-    if(/^\d{1,2}$/.test(t)){
-      return new Date(nextMonth.getFullYear(), nextMonth.getMonth(), +t);
-    }else if(/^\d{1,2}-\d{1,2}$/.test(t)){
-      const [dd,mm]=t.split("-").map(Number);
-      return new Date(y, mm-1, dd);
-    }
-    return null;
+    const d = parseDayToken(s);
+    if(!d) return null;
+    return new Date(nextMonth.getFullYear(), nextMonth.getMonth(), d);
   }).filter(Boolean);
 }
-// Hitung jumlah tanggal unik pada string "d-MM, d-MM" atau "d, d"
+
+// Hitung jumlah tanggal unik dari string "2, 5, 10"
 function countUniqueDates(str){
   if(!str) return 0;
-  return new Set(str.split(",").map(s=>s.trim()).filter(Boolean)).size;
+  const arr = stringToDayArray(str);
+  return new Set(arr).size;
 }
 
 /* ===================== DATEPICKER ===================== */
@@ -183,16 +193,16 @@ function initDatepicker(selector, fullDays, preselectedStr){
   const el = document.querySelector(selector);
   if(el && el._adp){ el._adp.destroy(); }
 
-  const disabledDates = buildDisabledDates(fullDays||[]);
+  const disabledDates   = buildDisabledDates(fullDays||[]);
+  const preselectedDate = daysToDateObjects(preselectedStr||"");
   const now = new Date();
   const nextMonth = new Date(now.getFullYear(), now.getMonth()+1, 1);
   const isLibur = (selector === '#libur');
-  const preselectedDates = dmmStringToDates(preselectedStr||"");
 
   const dp = new AirDatepicker(selector, {
     multipleDates: isLibur ? MAX_LIBUR_USER : true,
     multipleDatesSeparator: ', ',
-    dateFormat: 'd-MM',
+    dateFormat: 'd',                // 🔹 tampil HARI saja
     disabledDates,
     locale:{
       days:['Minggu','Senin','Selasa','Rabu','Kamis','Jumat','Sabtu'],
@@ -208,13 +218,16 @@ function initDatepicker(selector, fullDays, preselectedStr){
     maxDate: new Date(nextMonth.getFullYear(), nextMonth.getMonth()+1, 0),
     position:'bottom left',
     readOnly:true,
-    selectedDates: preselectedDates,
+    selectedDates: preselectedDate,
     onSelect: ({ formattedDate })=>{
       if(!isLibur) return;
-      const parts = (formattedDate||'').split(',').map(s=>s.trim()).filter(Boolean);
+      const parts = stringToDayArray(formattedDate || "");
       if(parts.length>MAX_LIBUR_USER){
-        const cut = dmmStringToDates(parts.slice(0,MAX_LIBUR_USER).join(', '));
-        dp.clear(); dp.selectDate(cut);
+        const keep = parts.slice(0,MAX_LIBUR_USER);
+        dp.clear();
+        dp.selectDate(keep.map(d=>{
+          return new Date(nextMonth.getFullYear(), nextMonth.getMonth(), d);
+        }));
         const status=document.getElementById('status');
         status.textContent=`⚠️ Maksimal memilih ${MAX_LIBUR_USER} tanggal libur.`; 
         status.className='error';
@@ -232,11 +245,10 @@ function setFormValuesFromServer(payload){
   if(data.nama  != null) document.getElementById("nama").value  = data.nama;
   if(data.group != null) document.getElementById("group").value = data.group;
 
-  const liburNorm = normalizeDateString(data.libur || "");
-  const cutiNorm  = normalizeDateString(data.cuti  || "");
-  const liburParts = liburNorm ? liburNorm.split(",").map(s=>s.trim()).filter(Boolean) : [];
-  document.getElementById("libur").value = liburParts.slice(0, MAX_LIBUR_USER).join(", ");
-  document.getElementById("cuti").value  = cutiNorm;
+  const liburDays = stringToDayArray(data.libur || "");
+  const cutiDays  = stringToDayArray(data.cuti  || "");
+  document.getElementById("libur").value = dayArrayToDisplay(liburDays);
+  document.getElementById("cuti").value  = dayArrayToDisplay(cutiDays);
 
   document.getElementById("requestLainnya").value = data.requestLainnya || "";
   if(data.ekstrakulikuler){
@@ -303,7 +315,7 @@ function startCountdown(){
     const resDays = await fetch(scriptURL);
     const fullDays = resDays.ok ? await resDays.json() : [];
 
-    // Inisialisasi datepicker dengan preselected dari input yang sudah diisi
+    // Inisialisasi datepicker dengan preselected dari input yang sudah diisi (hari saja)
     initDatepicker('#libur', fullDays, document.getElementById('libur').value);
     initDatepicker('#cuti',  fullDays, document.getElementById('cuti').value);
 
@@ -320,36 +332,20 @@ document.getElementById("requestForm").addEventListener("submit", async function
   const status = document.getElementById("status");
   status.textContent="⏳ Mengirim data..."; status.className="";
 
-  // Urutkan tanggal "d-MM"
-  function sortDates(str){
-    if(!str) return "";
-    const arr = str.split(",").map(s=>s.trim()).filter(Boolean);
-    arr.sort((a,b)=>{
-      const [da,ma]=a.split("-").map(Number);
-      const [db,mb]=b.split("-").map(Number);
-      return ma===mb ? da-db : ma-mb;
-    });
-    return Array.from(new Set(arr)).join(", ");
-  }
-
-  // 🔹 BARU: buang bulan, hanya simpan tanggal ke sheet (contoh "2-03, 5-03" -> "2, 5")
-  function stripMonth(str){
-    if(!str) return "";
-    return str.split(",").map(s=>s.trim()).filter(Boolean).map(v=>{
-      // ambil angka di depan sebelum tanda "-"
-      const m = v.match(/^(\d{1,2})/);
-      return m ? m[1] : v;
-    }).join(", ");
+  // sort & unique hari saja, contoh "5, 2, 2" -> "2, 5"
+  function sortDays(str){
+    const arr = stringToDayArray(str);
+    if(!arr.length) return "";
+    const sortedUniq = Array.from(new Set(arr)).sort((a,b)=>a-b);
+    return sortedUniq.join(", ");
   }
 
   const liburInput=document.getElementById("libur");
   const cutiInput =document.getElementById("cuti");
 
-  // sort dulu (berdasarkan d-MM), lalu konversi jadi tanggal saja
-  liburInput.value = stripMonth(sortDates(liburInput.value));
-  cutiInput.value  = stripMonth(sortDates(cutiInput.value));
+  liburInput.value = sortDays(liburInput.value);
+  cutiInput.value  = sortDays(cutiInput.value);
 
-  // Validasi batas tanggal libur
   const liburCount=countUniqueDates(liburInput.value);
   if(liburCount>MAX_LIBUR_USER){
     status.textContent=`❌ Maksimal memilih ${MAX_LIBUR_USER} tanggal libur. Anda memilih ${liburCount}.`;
@@ -384,7 +380,6 @@ document.getElementById("requestForm").addEventListener("submit", async function
         status.className="error";
       } else if(text.startsWith("Sukses")){
         status.textContent="✅ "+text; status.className="success";
-        // Prefill ulang via GET
         const nik = document.getElementById("nik").value.trim();
         try{
           const r = await fetch(`${scriptURL}?nik=${encodeURIComponent(nik)}`);
@@ -403,7 +398,3 @@ document.getElementById("requestForm").addEventListener("submit", async function
 </script>
 </body>
 </html>
-
-
-
-
